# polygon-ui

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TASKS.md  Taskfile.yml  dash-mantine-components-documentation.md  pyproject.toml
.claude/: CONTEXT.md  RULES.md  workflow-state.json
.claude/context-checkpoints/: checkpoint-0.md  checkpoint-1-ready.md  checkpoint-batch-1-complete.md  checkpoint-batch-2-complete.md  checkpoint-task-1-1.md  checkpoint-task-1-2.md  checkpoint-theme-system-complete.md  checkpoint-workflow-start.md
.claude/workflow/: PRD.md  TASKS.md  ui-audit-findings.md
.github/workflows/: ci.yml
docs/: Styling-API-Examples.md  dash-mantine-components-documentation.md  dash-mantine-components-reference.md  development-plan.md
docs/Mantine Reference/: Mantine-Layout.md  Mantine-styling.md  Mantine-theming.md  Overview.md
docs/layout/: component_template.md  grid-system.md
src/polygon_ui/: __init__.py  main.py
styles/: theme_css.py
tests/: test_basic.py  test_cross_platform.py  test_integration.py  test_polybook_theme.py  test_theme.py  test_theme_system.py  test_visual_regression.py
tests/layout/: conftest.py  test_aspect_ratio.py  test_base_components.py  test_box.py  test_center.py  test_col.py  test_container.py  test_flex.py  test_grid.py  test_grid_integration.py  test_group.py  test_infrastructure.py  test_performance.py  test_responsive.py  test_simple_grid.py  test_stack.py  test_utils.py
tests/test_layout/: test_container.py  test_container_performance.py
(+58 files in other folders)
