[tool.poetry]
name = "polygon-ui"
version = "0.2.0"
description = "A library/framework of UI components for Qt/PySide, similar to Mantine for webapps"
authors = [
    "K3rm1t <janthonyrajah@gmail.com>"
]
repository = "https://github.com/JRAnthonyrajah/polygon-ui"
packages = [{ include = "polygon_ui", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
PySide6 = "^6.6.0"
PySide6-essentials = "^6.6.0"

[tool.poetry.scripts]
polygon-ui = "polygon_ui.main:main"
polybook = "polygon_ui.polybook:run_polybook"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-watch = "^4.2.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
black = "^24.8.0"
pytest-benchmark = "^5.2.3"
memory-profiler = "^0.61.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/polygon_ui/__init__.py:__version__"
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
